--- a/api_key.yaml
+++ b/api_key.yaml
@@ -1,2 +1,2 @@
-OPEN_AI_KEY: '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'
-HUGGING_FACE_TOKEN_KEY: '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'
+OPEN_AI_KEY: 'sk-' # GET YOUR OWN OPEN_AI_KEY API KEY FOR TEST PURPOSE
+HUGGING_FACE_TOKEN_KEY: 'hf_' # GET YOUR OWN HUGGING_FACE_TOKEN_KEY FOR TEST PURPOSE
